@@ -5,12 +5,12 @@ import com.jagrosh.jdautilities.oauth2.entities.OAuth2Guild;
 import com.jagrosh.jdautilities.oauth2.entities.OAuth2User;
 import com.jagrosh.jdautilities.oauth2.session.Session;
 import de.presti.ree6.webinterface.Server;
-import de.presti.ree6.webinterface.bot.BotInfo;
-import de.presti.ree6.webinterface.bot.BotVersion;
+import de.presti.ree6.webinterface.bot.BotWorker;
+import de.presti.ree6.webinterface.bot.version.BotVersion;
 import de.presti.ree6.webinterface.controller.forms.ChannelChangeForm;
 import de.presti.ree6.webinterface.controller.forms.RoleChangeForm;
 import de.presti.ree6.webinterface.controller.forms.SettingChangeForm;
-import de.presti.ree6.webinterface.level.UserLevel;
+import de.presti.ree6.webinterface.sql.entities.UserLevel;
 import de.presti.ree6.webinterface.utils.RandomUtil;
 import de.presti.ree6.webinterface.utils.Setting;
 import net.dv8tion.jda.api.Permission;
@@ -22,10 +22,13 @@ import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.ModelAndView;
 
+import javax.servlet.http.Cookie;
+import javax.servlet.http.HttpServletResponse;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * Controller for the Frontend to manage what the user sees.
@@ -56,18 +59,19 @@ public class FrontendController {
      */
     @GetMapping("/discord/auth")
     public ModelAndView startDiscordAuth() {
-        return new ModelAndView("redirect:" + Server.getInstance().getOAuth2Client().generateAuthorizationURL((BotInfo.version != BotVersion.DEV ? "https://cp.ree6.de" : "http://localhost:8888") + "/discord/auth/callback", Scope.GUILDS, Scope.IDENTIFY, Scope.GUILDS_JOIN));
+        return new ModelAndView("redirect:" + Server.getInstance().getOAuth2Client().generateAuthorizationURL((BotWorker.getVersion() != BotVersion.DEV ? "https://cp.ree6.de" : "http://localhost:8888") + "/discord/auth/callback", Scope.GUILDS, Scope.IDENTIFY, Scope.GUILDS_JOIN));
     }
 
     /**
      * The Request Mapper for the Discord Auth callback.
      *
-     * @param code  the OAuth2 Code from Discord.
-     * @param state the local State of the OAuth2 Session.
+     * @param httpServletResponse the HTTP Response.
+     * @param code                the OAuth2 Code from Discord.
+     * @param state               the local State of the OAuth2 Session.
      * @return {@link ModelAndView} with the redirect data.
      */
     @GetMapping(value = "/discord/auth/callback")
-    public ModelAndView discordLogin(@RequestParam String code, @RequestParam String state) {
+    public ModelAndView discordLogin(HttpServletResponse httpServletResponse, @RequestParam String code, @RequestParam String state) {
         Session session = null;
 
         // Generate a secure Base64 String for the Identifier.
@@ -80,10 +84,33 @@ public class FrontendController {
         }
 
         // If the given data was valid and a Session has been created redirect to the panel Site. If not redirect to error.
-        if (session != null)
-            return new ModelAndView("redirect:" + (BotInfo.version != BotVersion.DEV ? "https://cp.ree6.de" : "http://localhost:8888") + "/panel?id=" + identifier);
-        else
-            return new ModelAndView("redirect:" + (BotInfo.version != BotVersion.DEV ? "https://cp.ree6.de" : "http://localhost:8888") + "/error");
+        if (session != null) {
+
+            Cookie cookie = new Cookie("identifier", Base64.getEncoder().encodeToString(identifier.getBytes(StandardCharsets.UTF_8)));
+
+            cookie.setHttpOnly(true);
+            cookie.setMaxAge(7 * 24 * 60 * 60);
+            if (BotWorker.getVersion() != BotVersion.DEV) cookie.setSecure(true);
+            cookie.setPath("/");
+
+            httpServletResponse.addCookie(cookie);
+
+            try {
+                Server.getInstance().getOAuth2Client().getUser(session).queue(oAuth2User -> {
+                    if (oAuth2User != null) {
+                        Guild guild = BotWorker.getShardManager().getGuildById(805149057004732457L);
+                        if (guild != null) {
+                            Server.getInstance().getOAuth2Client().joinGuild(oAuth2User, guild).queue();
+                        }
+                    }
+                });
+            } catch (Exception ignore) {
+            }
+
+            return new ModelAndView("redirect:" + (BotWorker.getVersion() != BotVersion.DEV ? "https://cp.ree6.de" : "http://localhost:8888") + "/panel");
+        } else {
+            return new ModelAndView("redirect:" + (BotWorker.getVersion() != BotVersion.DEV ? "https://cp.ree6.de" : "http://localhost:8888") + "/error");
+        }
     }
 
     //endregion
@@ -98,25 +125,68 @@ public class FrontendController {
      * @return {@link ModelAndView} with the redirect data.
      */
     @GetMapping(value = "/leaderboard/chat")
-    public String getLeaderboardChat(@RequestParam String guildId, Model model) {
+    public String getLeaderboardChat(HttpServletResponse httpServletResponse, @CookieValue(name = "identifier", defaultValue = "-1") String id, @RequestParam String guildId, Model model) {
 
-        Guild guild = BotInfo.botInstance.getGuildById(guildId);
+        // Check and decode the Identifier saved in the Cookies.
+        id = getIdentifier(id);
 
-        if (guild != null) model.addAttribute("guild", guild);
+        if (checkIdentifier(id)) {
+            model.addAttribute("title", "Insufficient Permissions");
+            model.addAttribute("message", new String[] { "Please check if you are logged in!" });
+            deleteSessionCookie(httpServletResponse);
+            return ERROR_PATH;
+        }
+
+        try {
+            // Try retrieving the Session from the Identifier.
+            Session session = Server.getInstance().getOAuth2Client().getSessionController().getSession(id);
+
+            if (session == null) {
+                model.addAttribute("title", "Insufficient Permissions");
+                model.addAttribute("message", new String[] { "Please check if you are logged in!" });
+                deleteSessionCookie(httpServletResponse);
+                return ERROR_PATH;
+            }
+
+            // Try retrieving the User from the Session.
+            OAuth2User oAuth2User = Server.getInstance().getOAuth2Client().getUser(session).complete();
+
+            // Retrieve the Guild by its giving ID.
+            Guild guild = BotWorker.getShardManager().getGuildById(guildId);
+
+            // If the Guild couldn't be loaded redirect to Error page.
+            if (guild == null) {
+                model.addAttribute("title", "Invalid Guild");
+                model.addAttribute("message", new String[] { "The requested Guild is Invalid or not recognized!" });
+                return ERROR_PATH;
+            }
+
+            Member member = guild.retrieveMemberById(oAuth2User.getId()).complete();
+
+            if (member == null) {
+                model.addAttribute("title", "Insufficient Permissions");
+                model.addAttribute("message", new String[] { "You are not part of this Guild!" });
+                return ERROR_PATH;
+            }
+
+            model.addAttribute("guild", guild);
+        } catch (Exception exception) {
+            model.addAttribute("title", "Unexpected Error, please Report!");
+            model.addAttribute("message", new String[] { "We received an unexpected error, please report this to the developer! (" + exception.getMessage() + ")" });
+            return ERROR_PATH;
+        }
 
         int i = 1;
-        for (String userIds : Server.getInstance().getSqlConnector().getSqlWorker().getTopChat(guildId, 5)) {
-
-            UserLevel userLevel = new UserLevel(userIds, Server.getInstance().getSqlConnector().getSqlWorker().getChatXP(guildId, userIds));
-
+        for (UserLevel userLevel : Server.getInstance().getSqlConnector().getSqlWorker().getTopChat(guildId, 5)) {
             try {
-                if (BotInfo.botInstance.getUserById(userIds) != null) {
-                    userLevel.setUser(BotInfo.botInstance.getUserById(userIds));
+                if (BotWorker.getShardManager().getUserById(userLevel.getUserId()) != null) {
+                    userLevel.setUser(BotWorker.getShardManager().getUserById(userLevel.getUserId()));
                 } else {
-                    userLevel.setUser(BotInfo.botInstance.retrieveUserById(userIds).complete());
+                    userLevel.setUser(BotWorker.getShardManager().retrieveUserById(userLevel.getUserId()).complete());
                 }
             } catch (Exception ignore) {
-                Server.getInstance().getSqlConnector().getSqlWorker().addChatXP(guildId, userIds, -userLevel.getXp());
+                userLevel.setExperience(0);
+                Server.getInstance().getSqlConnector().getSqlWorker().addChatLevelData(guildId, userLevel);
             }
 
             model.addAttribute("user" + i, userLevel);
@@ -134,25 +204,68 @@ public class FrontendController {
      * @return {@link ModelAndView} with the redirect data.
      */
     @GetMapping(value = "/leaderboard/voice")
-    public String getLeaderboardVoice(@RequestParam String guildId, Model model) {
+    public String getLeaderboardVoice(HttpServletResponse httpServletResponse, @CookieValue(name = "identifier", defaultValue = "-1") String id, @RequestParam String guildId, Model model) {
 
-        Guild guild = BotInfo.botInstance.getGuildById(guildId);
+        // Check and decode the Identifier saved in the Cookies.
+        id = getIdentifier(id);
 
-        if (guild != null) model.addAttribute("guild", guild);
+        if (checkIdentifier(id)) {
+            model.addAttribute("title", "Insufficient Permissions");
+            model.addAttribute("message", new String[] { "Please check if you are logged in!" });
+            deleteSessionCookie(httpServletResponse);
+            return ERROR_PATH;
+        }
+
+        try {
+            // Try retrieving the Session from the Identifier.
+            Session session = Server.getInstance().getOAuth2Client().getSessionController().getSession(id);
+
+            if (session == null) {
+                model.addAttribute("title", "Insufficient Permissions");
+                model.addAttribute("message", new String[] { "Please check if you are logged in!" });
+                deleteSessionCookie(httpServletResponse);
+                return ERROR_PATH;
+            }
+
+            // Try retrieving the User from the Session.
+            OAuth2User oAuth2User = Server.getInstance().getOAuth2Client().getUser(session).complete();
+
+            // Retrieve the Guild by its giving ID.
+            Guild guild = BotWorker.getShardManager().getGuildById(guildId);
+
+            // If the Guild couldn't be loaded redirect to Error page.
+            if (guild == null) {
+                model.addAttribute("title", "Invalid Guild");
+                model.addAttribute("message", new String[] { "The requested Guild is Invalid or not recognized!" });
+                return ERROR_PATH;
+            }
+
+            Member member = guild.retrieveMemberById(oAuth2User.getId()).complete();
+
+            if (member == null) {
+                model.addAttribute("title", "Insufficient Permissions");
+                model.addAttribute("message", new String[] { "You are not part of this Guild!" });
+                return ERROR_PATH;
+            }
+
+            model.addAttribute("guild", guild);
+        } catch (Exception exception) {
+            model.addAttribute("title", "Unexpected Error, please Report!");
+            model.addAttribute("message", new String[] { "We received an unexpected error, please report this to the developer! (" + exception.getMessage() + ")" });
+            return ERROR_PATH;
+        }
 
         int i = 1;
-        for (String userIds : Server.getInstance().getSqlConnector().getSqlWorker().getTopVoice(guildId, 5)) {
-
-            UserLevel userLevel = new UserLevel(userIds, Server.getInstance().getSqlConnector().getSqlWorker().getVoiceXP(guildId, userIds));
-
+        for (UserLevel userLevel : Server.getInstance().getSqlConnector().getSqlWorker().getTopVoice(guildId, 5)) {
             try {
-                if (BotInfo.botInstance.getUserById(userIds) != null) {
-                    userLevel.setUser(BotInfo.botInstance.getUserById(userIds));
+                if (BotWorker.getShardManager().getUserById(userLevel.getUserId()) != null) {
+                    userLevel.setUser(BotWorker.getShardManager().getUserById(userLevel.getUserId()));
                 } else {
-                    userLevel.setUser(BotInfo.botInstance.retrieveUserById(userIds).complete());
+                    userLevel.setUser(BotWorker.getShardManager().retrieveUserById(userLevel.getUserId()).complete());
                 }
             } catch (Exception ignore) {
-                Server.getInstance().getSqlConnector().getSqlWorker().addChatXP(guildId, userIds, -userLevel.getXp());
+                userLevel.setExperience(0);
+                Server.getInstance().getSqlConnector().getSqlWorker().addChatLevelData(guildId, userLevel);
             }
 
             model.addAttribute("user" + i, userLevel);
@@ -174,7 +287,17 @@ public class FrontendController {
      * @return {@link String} for Thyme to the HTML Page.
      */
     @GetMapping(path = "/panel")
-    public String openPanel(@RequestParam String id, Model model) {
+    public String openPanel(HttpServletResponse httpServletResponse, @CookieValue(name = "identifier", defaultValue = "-1") String id, Model model) {
+
+        // Check and decode the Identifier saved in the Cookies.
+        id = getIdentifier(id);
+
+        if (checkIdentifier(id)) {
+            model.addAttribute("IsError", true);
+            model.addAttribute("error", "Couldn't load Session!");
+            deleteSessionCookie(httpServletResponse);
+            return MAIN_PATH;
+        }
 
         Session session = null;
         List<OAuth2Guild> guilds;
@@ -196,11 +319,14 @@ public class FrontendController {
             model.addAttribute("guilds", guilds);
         } catch (Exception e) {
             // If the Session is null just return to the default Page.
-            if (session == null) return MAIN_PATH;
+            if (session == null) {
+                deleteSessionCookie(httpServletResponse);
+                return MAIN_PATH;
+            }
 
             // If the Session isn't null give the User a Notification that his Guilds couldn't be loaded.
             model.addAttribute("IsError", true);
-            model.addAttribute("error", "Couldn't load Guilds!");
+            model.addAttribute("error", "Couldn't load Session!");
         }
 
         // Return Panel Page.
@@ -214,24 +340,35 @@ public class FrontendController {
     /**
      * Request Mapper for the Server Panel Page.
      *
-     * @param id      the Session Identifier.
-     * @param guildID the ID of the selected Guild.
-     * @param model   the ViewModel.
+     * @param httpServletResponse the HTTP Response.
+     * @param id                  the Session Identifier.
+     * @param guildID             the ID of the selected Guild.
+     * @param model               the ViewModel.
      * @return {@link String} for Thyme to the HTML Page.
      */
     @GetMapping(path = "/panel/server")
-    public String openServerPanel(@RequestParam String id, @RequestParam String guildID, Model model) {
+    public String openServerPanel(HttpServletResponse httpServletResponse, @CookieValue(name = "identifier", defaultValue = "-1") String id, @RequestParam String guildID, Model model) {
+
+        // Check and decode the Identifier saved in the Cookies.
+        id = getIdentifier(id);
+
+        if (checkIdentifier(id)) {
+            model.addAttribute("IsError", true);
+            model.addAttribute("error", "Couldn't load Session!");
+            deleteSessionCookie(httpServletResponse);
+            return "main/index";
+        }
 
         // Set default Data and If there was an error return to the Error Page.
-        if (setDefaultInformation(model, guildID, id)) return ERROR_PATH;
+        if (setDefaultInformation(model, httpServletResponse, guildID, id)) return ERROR_PATH;
 
         // Retrieve every Role and Channel of the Guild and set them as Attribute.
         model.addAttribute("invites", Server.getInstance().getSqlConnector().getSqlWorker().getInvites(guildID));
 
         StringBuilder commandStats = new StringBuilder();
 
-        for (Map.Entry<String, Long> entrySet : Server.getInstance().getSqlConnector().getSqlWorker().getStats(guildID).entrySet()) {
-            commandStats.append(entrySet.getKey()).append(" - ").append(entrySet.getValue()).append(", ");
+        for (String[] entrySet : Server.getInstance().getSqlConnector().getSqlWorker().getStats(guildID)) {
+            commandStats.append(entrySet[0]).append(" - ").append(entrySet[1]).append(", ");
         }
 
         if (commandStats.length() > 0) {
@@ -253,21 +390,32 @@ public class FrontendController {
     /**
      * Request Mapper for the Moderation Panel Page.
      *
-     * @param id      the Session Identifier.
-     * @param guildID the ID of the selected Guild.
-     * @param model   the ViewModel.
+     * @param httpServletResponse the HTTP Response.
+     * @param id                  the Session Identifier.
+     * @param guildID             the ID of the selected Guild.
+     * @param model               the ViewModel.
      * @return {@link String} for Thyme to the HTML Page.
      */
     @GetMapping(path = "/panel/moderation")
-    public String openPanelModeration(@RequestParam String id, @RequestParam String guildID, Model model) {
+    public String openPanelModeration(HttpServletResponse httpServletResponse, @CookieValue(name = "identifier", defaultValue = "-1") String id, @RequestParam String guildID, Model model) {
+
+        // Check and decode the Identifier saved in the Cookies.
+        id = getIdentifier(id);
+
+        if (checkIdentifier(id)) {
+            model.addAttribute("IsError", true);
+            model.addAttribute("error", "Couldn't load Session!");
+            deleteSessionCookie(httpServletResponse);
+            return "main/index";
+        }
 
         // Set default Data and If there was an error return to the Error Page.
-        if (setDefaultInformation(model, guildID, id)) return ERROR_PATH;
+        if (setDefaultInformation(model, httpServletResponse, guildID, id)) return ERROR_PATH;
 
         // Get the Guild from the Model.
         Guild guild = null;
 
-        if (model.getAttribute("guild") instanceof Guild) guild = (Guild) model.getAttribute("guild");
+        if (model.getAttribute("guild") instanceof Guild guild1) guild = guild1;
 
         // If null return to Error page.
         if (guild == null) return ERROR_PATH;
@@ -275,7 +423,7 @@ public class FrontendController {
         // Retrieve every Role and Channel of the Guild and set them as Attribute.
         model.addAttribute("roles", guild.getRoles());
         model.addAttribute("channels", guild.getTextChannels());
-        model.addAttribute("commands", Server.getInstance().getSqlConnector().getSqlWorker().getAllSettings(guildID).stream().filter(setting -> setting.getName().startsWith("com")).collect(Collectors.toList()));
+        model.addAttribute("commands", Server.getInstance().getSqlConnector().getSqlWorker().getAllSettings(guildID).stream().filter(setting -> setting.getName().startsWith("com")).toList());
         model.addAttribute("prefixSetting", Server.getInstance().getSqlConnector().getSqlWorker().getSetting(guildID, "chatprefix"));
         model.addAttribute("words", Server.getInstance().getSqlConnector().getSqlWorker().getChatProtectorWords(guildID));
 
@@ -296,7 +444,7 @@ public class FrontendController {
         try {
             muteRole = guild.getRoleById(Server.getInstance().getSqlConnector().getSqlWorker().getMuteRole(guildID));
         } catch (Exception ignore) {
-            Server.getInstance().getSqlConnector().getSqlWorker().removeMuteRole(guildID, Server.getInstance().getSqlConnector().getSqlWorker().getMuteRole(guildID));
+            Server.getInstance().getSqlConnector().getSqlWorker().removeMuteRole(guildID);
         }
 
         model.addAttribute("muterole", muteRole);
@@ -308,20 +456,22 @@ public class FrontendController {
     /**
      * Request Mapper for the Moderation Role Change Panel.
      *
-     * @param roleChangeForm as the Form which contains the needed data.
-     * @param model          the ViewModel.
+     * @param httpServletResponse the HTTP Response.
+     * @param roleChangeForm      as the Form which contains the needed data.
+     * @param model               the ViewModel.
      * @return {@link String} for Thyme to the HTML Page.
      */
     @PostMapping(path = "/panel/moderation/role")
-    public String openPanelModeration(@ModelAttribute(name = "roleChangeForm") RoleChangeForm roleChangeForm, Model model) {
+    public String openPanelModeration(HttpServletResponse httpServletResponse, @ModelAttribute(name = "roleChangeForm") RoleChangeForm roleChangeForm, Model model) {
 
         // Set default Data and If there was an error return to the Error Page.
-        if (setDefaultInformation(model, roleChangeForm.getGuild(), roleChangeForm.getIdentifier())) return ERROR_PATH;
+        if (setDefaultInformation(model, httpServletResponse, roleChangeForm.getGuild(), roleChangeForm.getIdentifier()))
+            return ERROR_PATH;
 
         // Get the Guild from the Model.
         Guild guild = null;
 
-        if (model.getAttribute("guild") instanceof Guild) guild = (Guild) model.getAttribute("guild");
+        if (model.getAttribute("guild") instanceof Guild guild1) guild = guild1;
 
         // If null return to Error page.
         if (guild == null) return ERROR_PATH;
@@ -334,7 +484,7 @@ public class FrontendController {
         // Retrieve every Role and Channel of the Guild and set them as Attribute.
         model.addAttribute("roles", guild.getRoles());
         model.addAttribute("channels", guild.getTextChannels());
-        model.addAttribute("commands", Server.getInstance().getSqlConnector().getSqlWorker().getAllSettings(guild.getId()).stream().filter(setting -> setting.getName().startsWith("com")).collect(Collectors.toList()));
+        model.addAttribute("commands", Server.getInstance().getSqlConnector().getSqlWorker().getAllSettings(guild.getId()).stream().filter(setting -> setting.getName().startsWith("com")).toList());
         model.addAttribute("prefixSetting", Server.getInstance().getSqlConnector().getSqlWorker().getSetting(guild.getId(), "chatprefix"));
         model.addAttribute("words", Server.getInstance().getSqlConnector().getSqlWorker().getChatProtectorWords(guild.getId()));
 
@@ -351,7 +501,7 @@ public class FrontendController {
         try {
             muteRole = guild.getRoleById(Server.getInstance().getSqlConnector().getSqlWorker().getMuteRole(guild.getId()));
         } catch (Exception ignore) {
-            Server.getInstance().getSqlConnector().getSqlWorker().removeMuteRole(guild.getId(), Server.getInstance().getSqlConnector().getSqlWorker().getMuteRole(guild.getId()));
+            Server.getInstance().getSqlConnector().getSqlWorker().removeMuteRole(guild.getId());
         }
 
         model.addAttribute("muterole", muteRole);
@@ -362,21 +512,22 @@ public class FrontendController {
     /**
      * Request Mapper for the Moderation Settings Change Panel.
      *
-     * @param settingChangeForm as the Form which contains the needed data.
-     * @param model             the ViewModel.
+     * @param httpServletResponse the HTTP Response.
+     * @param settingChangeForm   as the Form which contains the needed data.
+     * @param model               the ViewModel.
      * @return {@link String} for Thyme to the HTML Page.
      */
     @PostMapping(path = "/panel/moderation/settings")
-    public String openPanelModeration(@ModelAttribute(name = "settingChangeForm") SettingChangeForm settingChangeForm, Model model) {
+    public String openPanelModeration(HttpServletResponse httpServletResponse, @ModelAttribute(name = "settingChangeForm") SettingChangeForm settingChangeForm, Model model) {
 
         // Set default Data and If there was an error return to the Error Page.
-        if (setDefaultInformation(model, settingChangeForm.getGuild(), settingChangeForm.getIdentifier()))
+        if (setDefaultInformation(model, httpServletResponse, settingChangeForm.getGuild(), settingChangeForm.getIdentifier()))
             return ERROR_PATH;
 
         // Get the Guild from the Model.
         Guild guild = null;
 
-        if (model.getAttribute("guild") instanceof Guild) guild = (Guild) model.getAttribute("guild");
+        if (model.getAttribute("guild") instanceof Guild guild1) guild = guild1;
 
         // If null return to Error page.
         if (guild == null) return ERROR_PATH;
@@ -386,32 +537,17 @@ public class FrontendController {
             Server.getInstance().getSqlConnector().getSqlWorker().setSetting(settingChangeForm.getGuild(), settingChangeForm.getSetting());
         } else {
             switch (settingChangeForm.getSetting().getName()) {
-                case "addBadWord": {
-                    Server.getInstance().getSqlConnector().getSqlWorker().addChatProtectorWord(settingChangeForm.getGuild(), settingChangeForm.getSetting().getStringValue());
-                    break;
-                }
-
-                case "removeBadWord": {
-                    Server.getInstance().getSqlConnector().getSqlWorker().removeChatProtectorWord(settingChangeForm.getGuild(), settingChangeForm.getSetting().getStringValue());
-                    break;
-                }
-
-                case "addAutoRole": {
-                    Server.getInstance().getSqlConnector().getSqlWorker().addAutoRole(settingChangeForm.getGuild(), settingChangeForm.getSetting().getStringValue());
-                    break;
-                }
-
-                case "removeAutoRole": {
-                    Server.getInstance().getSqlConnector().getSqlWorker().removeAutoRole(settingChangeForm.getGuild(), settingChangeForm.getSetting().getStringValue());
-                    break;
-                }
+                case "addBadWord" -> Server.getInstance().getSqlConnector().getSqlWorker().addChatProtectorWord(settingChangeForm.getGuild(), settingChangeForm.getSetting().getStringValue());
+                case "removeBadWord" -> Server.getInstance().getSqlConnector().getSqlWorker().removeChatProtectorWord(settingChangeForm.getGuild(), settingChangeForm.getSetting().getStringValue());
+                case "addAutoRole" -> Server.getInstance().getSqlConnector().getSqlWorker().addAutoRole(settingChangeForm.getGuild(), settingChangeForm.getSetting().getStringValue());
+                case "removeAutoRole" -> Server.getInstance().getSqlConnector().getSqlWorker().removeAutoRole(settingChangeForm.getGuild(), settingChangeForm.getSetting().getStringValue());
             }
         }
 
         // Retrieve every Role and Channel of the Guild and set them as Attribute.
         model.addAttribute("roles", guild.getRoles());
         model.addAttribute("channels", guild.getTextChannels());
-        model.addAttribute("commands", Server.getInstance().getSqlConnector().getSqlWorker().getAllSettings(guild.getId()).stream().filter(setting -> setting.getName().startsWith("com")).collect(Collectors.toList()));
+        model.addAttribute("commands", Server.getInstance().getSqlConnector().getSqlWorker().getAllSettings(guild.getId()).stream().filter(setting -> setting.getName().startsWith("com")).toList());
         model.addAttribute("prefixSetting", Server.getInstance().getSqlConnector().getSqlWorker().getSetting(guild.getId(), "chatprefix"));
         model.addAttribute("words", Server.getInstance().getSqlConnector().getSqlWorker().getChatProtectorWords(guild.getId()));
 
@@ -428,7 +564,7 @@ public class FrontendController {
         try {
             muteRole = guild.getRoleById(Server.getInstance().getSqlConnector().getSqlWorker().getMuteRole(guild.getId()));
         } catch (Exception ignore) {
-            Server.getInstance().getSqlConnector().getSqlWorker().removeMuteRole(guild.getId(), Server.getInstance().getSqlConnector().getSqlWorker().getMuteRole(guild.getId()));
+            Server.getInstance().getSqlConnector().getSqlWorker().removeMuteRole(guild.getId());
         }
 
         model.addAttribute("muterole", muteRole);
@@ -443,21 +579,32 @@ public class FrontendController {
     /**
      * Request Mapper for the Social Panel Page.
      *
-     * @param id      the Session Identifier.
-     * @param guildID the ID of the selected Guild.
-     * @param model   the ViewModel.
+     * @param httpServletResponse the HTTP Response.
+     * @param id                  the Session Identifier.
+     * @param guildID             the ID of the selected Guild.
+     * @param model               the ViewModel.
      * @return {@link String} for Thyme to the HTML Page.
      */
     @GetMapping(path = "/panel/social")
-    public String openPanelSocial(@RequestParam String id, @RequestParam String guildID, Model model) {
+    public String openPanelSocial(HttpServletResponse httpServletResponse, @CookieValue(name = "identifier", defaultValue = "-1") String id, @RequestParam String guildID, Model model) {
+
+        // Check and decode the Identifier saved in the Cookies.
+        id = getIdentifier(id);
+
+        if (checkIdentifier(id)) {
+            model.addAttribute("IsError", true);
+            model.addAttribute("error", "Couldn't load Session!");
+            deleteSessionCookie(httpServletResponse);
+            return "main/index";
+        }
 
         // Set default Data and If there was an error return to the Error Page.
-        if (setDefaultInformation(model, guildID, id)) return ERROR_PATH;
+        if (setDefaultInformation(model, httpServletResponse, guildID, id)) return ERROR_PATH;
 
         // Get the Guild from the Model.
         Guild guild = null;
 
-        if (model.getAttribute("guild") instanceof Guild) guild = (Guild) model.getAttribute("guild");
+        if (model.getAttribute("guild") instanceof Guild guild1) guild = guild1;
 
         // If null return to Error page.
         if (guild == null) return ERROR_PATH;
@@ -474,21 +621,22 @@ public class FrontendController {
     /**
      * Request Mapper for the Social Channel Change Panel.
      *
-     * @param channelChangeForm as the Form which contains the needed data.
-     * @param model             the ViewModel.
+     * @param httpServletResponse the HTTP Response.
+     * @param channelChangeForm   as the Form which contains the needed data.
+     * @param model               the ViewModel.
      * @return {@link String} for Thyme to the HTML Page.
      */
     @PostMapping(path = "/panel/social/channel")
-    public String openPanelSocial(@ModelAttribute(name = "channelChangeForm") ChannelChangeForm channelChangeForm, Model model) {
+    public String openPanelSocial(HttpServletResponse httpServletResponse, @ModelAttribute(name = "channelChangeForm") ChannelChangeForm channelChangeForm, Model model) {
 
         // Set default Data and If there was an error return to the Error Page.
-        if (setDefaultInformation(model, channelChangeForm.getGuild(), channelChangeForm.getIdentifier()))
+        if (setDefaultInformation(model, httpServletResponse, channelChangeForm.getGuild(), channelChangeForm.getIdentifier()))
             return ERROR_PATH;
 
         // Get the Guild from the Model.
         Guild guild = null;
 
-        if (model.getAttribute("guild") instanceof Guild) guild = (Guild) model.getAttribute("guild");
+        if (model.getAttribute("guild") instanceof Guild guild1) guild = guild1;
 
         // If null return to Error page.
         if (guild == null) return ERROR_PATH;
@@ -500,10 +648,6 @@ public class FrontendController {
                 // Create new Webhook, If it has been created successfully add it to our Database.
                 Guild finalGuild = guild;
                 guild.getTextChannelById(channelChangeForm.getChannel()).createWebhook("Ree6-News").queue(webhook -> Server.getInstance().getSqlConnector().getSqlWorker().setNewsWebhook(finalGuild.getId(), webhook.getId(), webhook.getToken()));
-            } else if (channelChangeForm.getType().equalsIgnoreCase("mateChannel")) {
-                // Create new Webhook, If it has been created successfully add it to our Database.
-                Guild finalGuild = guild;
-                guild.getTextChannelById(channelChangeForm.getChannel()).createWebhook("Ree6-MateSearcher").queue(webhook -> Server.getInstance().getSqlConnector().getSqlWorker().setRainbowWebhook(finalGuild.getId(), webhook.getId(), webhook.getToken()));
             } else if (channelChangeForm.getType().equalsIgnoreCase("welcomeChannel")) {
                 // Create new Webhook, If it has been created successfully add it to our Database.
                 Guild finalGuild = guild;
@@ -522,21 +666,22 @@ public class FrontendController {
     /**
      * Request Mapper for the Social Setting Change Panel.
      *
-     * @param settingChangeForm as the Form which contains the needed data.
-     * @param model             the ViewModel.
+     * @param httpServletResponse the HTTP Response.
+     * @param settingChangeForm   as the Form which contains the needed data.
+     * @param model               the ViewModel.
      * @return {@link String} for Thyme to the HTML Page.
      */
     @PostMapping(path = "/panel/social/settings")
-    public String openPanelSocial(@ModelAttribute(name = "settingChangeForm") SettingChangeForm settingChangeForm, Model model) {
+    public String openPanelSocial(HttpServletResponse httpServletResponse, @ModelAttribute(name = "settingChangeForm") SettingChangeForm settingChangeForm, Model model) {
 
         // Set default Data and If there was an error return to the Error Page.
-        if (setDefaultInformation(model, settingChangeForm.getGuild(), settingChangeForm.getIdentifier()))
+        if (setDefaultInformation(model, httpServletResponse, settingChangeForm.getGuild(), settingChangeForm.getIdentifier()))
             return ERROR_PATH;
 
         // Get the Guild from the Model.
         Guild guild = null;
 
-        if (model.getAttribute("guild") instanceof Guild) guild = (Guild) model.getAttribute("guild");
+        if (model.getAttribute("guild") instanceof Guild guild1) guild = guild1;
 
         // If null return to Error page.
         if (guild == null) return ERROR_PATH;
@@ -563,27 +708,38 @@ public class FrontendController {
     /**
      * Request Mapper for the Logging Panel Page.
      *
-     * @param id      the Session Identifier.
-     * @param guildID the ID of the selected Guild.
-     * @param model   the ViewModel.
+     * @param httpServletResponse the HTTP Response.
+     * @param id                  the Session Identifier.
+     * @param guildID             the ID of the selected Guild.
+     * @param model               the ViewModel.
      * @return {@link String} for Thyme to the HTML Page.
      */
     @GetMapping(path = "/panel/logging")
-    public String openPanelLogging(@RequestParam String id, @RequestParam String guildID, Model model) {
+    public String openPanelLogging(HttpServletResponse httpServletResponse, @CookieValue(name = "identifier", defaultValue = "-1") String id, @RequestParam String guildID, Model model) {
+
+        // Check and decode the Identifier saved in the Cookies.
+        id = getIdentifier(id);
+
+        if (checkIdentifier(id)) {
+            model.addAttribute("IsError", true);
+            model.addAttribute("error", "Couldn't load Session!");
+            deleteSessionCookie(httpServletResponse);
+            return "main/index";
+        }
 
         // Set default Data and If there was an error return to the Error Page.
-        if (setDefaultInformation(model, guildID, id)) return ERROR_PATH;
+        if (setDefaultInformation(model, httpServletResponse, guildID, id)) return ERROR_PATH;
 
         // Get the Guild from the Model.
         Guild guild = null;
 
-        if (model.getAttribute("guild") instanceof Guild) guild = (Guild) model.getAttribute("guild");
+        if (model.getAttribute("guild") instanceof Guild guild1) guild = guild1;
 
         // If null return to Error page.
         if (guild == null) return ERROR_PATH;
 
         // Retrieve every Log Option and Channel of the Guild and set them as Attribute.
-        model.addAttribute("logs", Server.getInstance().getSqlConnector().getSqlWorker().getAllSettings(guild.getId()).stream().filter(setting -> setting.getName().startsWith("log")).collect(Collectors.toList()));
+        model.addAttribute("logs", Server.getInstance().getSqlConnector().getSqlWorker().getAllSettings(guild.getId()).stream().filter(setting -> setting.getName().startsWith("log")).toList());
         model.addAttribute("channels", guild.getTextChannels());
 
         // Return to the Logging Panel Page.
@@ -593,21 +749,22 @@ public class FrontendController {
     /**
      * Request Mapper for the Logging Channel Change Panel.
      *
-     * @param channelChangeForm as the Form which contains the needed data.
-     * @param model             the ViewModel.
+     * @param httpServletResponse the HTTP Response.
+     * @param channelChangeForm   as the Form which contains the needed data.
+     * @param model               the ViewModel.
      * @return {@link String} for Thyme to the HTML Page.
      */
     @PostMapping(path = "/panel/logging/channel")
-    public String openPanelLogging(@ModelAttribute(name = "channelChangeForm") ChannelChangeForm channelChangeForm, Model model) {
+    public String openPanelLogging(HttpServletResponse httpServletResponse, @ModelAttribute(name = "channelChangeForm") ChannelChangeForm channelChangeForm, Model model) {
 
         // Set default Data and If there was an error return to the Error Page.
-        if (setDefaultInformation(model, channelChangeForm.getGuild(), channelChangeForm.getIdentifier()))
+        if (setDefaultInformation(model, httpServletResponse, channelChangeForm.getGuild(), channelChangeForm.getIdentifier()))
             return ERROR_PATH;
 
         // Get the Guild from the Model.
         Guild guild = null;
 
-        if (model.getAttribute("guild") instanceof Guild) guild = (Guild) model.getAttribute("guild");
+        if (model.getAttribute("guild") instanceof Guild guild1) guild = guild1;
 
         // If null return to Error page.
         if (guild == null) return ERROR_PATH;
@@ -621,7 +778,7 @@ public class FrontendController {
         }
 
         // Retrieve every Log Option and Channel of the Guild and set them as Attribute.
-        model.addAttribute("logs", Server.getInstance().getSqlConnector().getSqlWorker().getAllSettings(guild.getId()).stream().filter(setting -> setting.getName().startsWith("log")).collect(Collectors.toList()));
+        model.addAttribute("logs", Server.getInstance().getSqlConnector().getSqlWorker().getAllSettings(guild.getId()).stream().filter(setting -> setting.getName().startsWith("log")).toList());
         model.addAttribute("channels", guild.getTextChannels());
 
         // Return to the Logging Panel Page.
@@ -631,21 +788,22 @@ public class FrontendController {
     /**
      * Request Mapper for the Logging Setting Change Panel.
      *
-     * @param settingChangeForm as the Form which contains the needed data.
-     * @param model             the ViewModel.
+     * @param httpServletResponse the HTTP Response.
+     * @param settingChangeForm   as the Form which contains the needed data.
+     * @param model               the ViewModel.
      * @return {@link String} for Thyme to the HTML Page.
      */
     @PostMapping(path = "/panel/logging/settings")
-    public String openPanelLogging(@ModelAttribute(name = "settingChangeForm") SettingChangeForm settingChangeForm, Model model) {
+    public String openPanelLogging(HttpServletResponse httpServletResponse, @ModelAttribute(name = "settingChangeForm") SettingChangeForm settingChangeForm, Model model) {
 
         // Set default Data and If there was an error return to the Error Page.
-        if (setDefaultInformation(model, settingChangeForm.getGuild(), settingChangeForm.getIdentifier()))
+        if (setDefaultInformation(model, httpServletResponse, settingChangeForm.getGuild(), settingChangeForm.getIdentifier()))
             return ERROR_PATH;
 
         // Get the Guild from the Model.
         Guild guild = null;
 
-        if (model.getAttribute("guild") instanceof Guild) guild = (Guild) model.getAttribute("guild");
+        if (model.getAttribute("guild") instanceof Guild guild1) guild = guild1;
 
         // If null return to Error page.
         if (guild == null) return ERROR_PATH;
@@ -653,7 +811,7 @@ public class FrontendController {
         // Change the setting Data.
         Server.getInstance().getSqlConnector().getSqlWorker().setSetting(settingChangeForm.getGuild(), settingChangeForm.getSetting());
         // Retrieve every Log Option and Channel of the Guild and set them as Attribute.
-        model.addAttribute("logs", Server.getInstance().getSqlConnector().getSqlWorker().getAllSettings(guild.getId()).stream().filter(setting -> setting.getName().startsWith("log")).collect(Collectors.toList()));
+        model.addAttribute("logs", Server.getInstance().getSqlConnector().getSqlWorker().getAllSettings(guild.getId()).stream().filter(setting -> setting.getName().startsWith("log")).toList());
         model.addAttribute("channels", guild.getTextChannels());
 
         // Return to the Logging Panel Page.
@@ -667,21 +825,27 @@ public class FrontendController {
     /**
      * Set default information such as the Session Identifier and {@link Guild} Entity.
      *
-     * @param model      the View Model.
-     * @param guildId    the ID of the Guild
-     * @param identifier the Session Identifier.
+     * @param model               the View Model.
+     * @param httpServletResponse the HTTP Response.
+     * @param guildId             the ID of the Guild
+     * @param identifier          the Session Identifier.
      * @return true, if there was an error | false, if everything was alright.
      */
-    public boolean setDefaultInformation(Model model, String guildId, String identifier) {
+    public boolean setDefaultInformation(Model model, HttpServletResponse httpServletResponse, String guildId, String identifier) {
         try {
             // Try retrieving the Session from the Identifier.
             Session session = Server.getInstance().getOAuth2Client().getSessionController().getSession(identifier);
+
+            if (session == null) {
+                deleteSessionCookie(httpServletResponse);
+                return true;
+            }
 
             // Try retrieving the User from the Session.
             OAuth2User oAuth2User = Server.getInstance().getOAuth2Client().getUser(session).complete();
 
             // Retrieve the Guild by its giving ID.
-            Guild guild = BotInfo.botInstance.getGuildById(guildId);
+            Guild guild = BotWorker.getShardManager().getGuildById(guildId);
 
             // If the Guild couldn't be loaded redirect to Error page.
             if (guild == null) return true;
@@ -699,9 +863,51 @@ public class FrontendController {
             }
 
             return false;
-        } catch (Exception ignore) {}
+        } catch (Exception ignore) {
+        }
 
         return true;
+    }
+
+    /**
+     * Delete a Session Cookie that has been set.
+     *
+     * @param httpServletResponse the HTTP Response.
+     */
+    public void deleteSessionCookie(HttpServletResponse httpServletResponse) {
+        Cookie cookie = new Cookie("identifier", null);
+
+        cookie.setHttpOnly(true);
+        cookie.setMaxAge(0);
+        if (BotWorker.getVersion() != BotVersion.DEV) cookie.setSecure(true);
+        cookie.setPath("/");
+
+        httpServletResponse.addCookie(cookie);
+    }
+
+    /**
+     * Get the Identifier out of the Cookie-Value.
+     *
+     * @param identifier the encoded Identifier.
+     * @return the decoded Identifier.
+     */
+    public String getIdentifier(String identifier) {
+        try {
+            identifier = new String(Base64.getDecoder().decode(identifier));
+            return identifier;
+        } catch (Exception ignored) {}
+
+        return null;
+    }
+
+    /**
+     * Check if a String is a valid identifier.
+     *
+     * @param identifier the "identifier".
+     * @return true, if it is a valid identifier | false, if not.
+     */
+    public boolean checkIdentifier(String identifier) {
+        return identifier == null || identifier.equals("-1");
     }
 
     //endregion
